--- a/scss/index.scss
+++ b/scss/index.scss
@@ -1,6 +1,8 @@
 $backgroundBody: #808080;
 $backgroundGray: #80808070;
 $colorWhite: #ffffff;
+$greenMenu : #48a770;
+$greemMenuHover: #388a5a;
 
 *{
 	margin:0;
@@ -12,20 +14,44 @@ html, body {
 	overflow-x: hidden;
 }
 #menu-toggle{
-	background-color: blue;
+	background-color: $greenMenu;
 	height: 100%;
 	position: fixed;
 	top: 0;
 	left: 0;
 	z-index: 2; 
+	padding: 0;
 	&.return-left{
 		transform: translateX(-100%);
-		transition: cubic-bezier(.77,.07,.69,.39) 0.4s;
+		transition: cubic-bezier(.77,.07,.69,.39) 0.5s;
 	}
 	&.return-right{
 		transform: translateX(0%);
-		transition: cubic-bezier(.77,.07,.69,.39) 0.4s;
+		transition: cubic-bezier(.77,.07,.69,.39) 0.5s;
 	}
+	ul {
+		padding: 0;
+		li {
+			list-style: none;
+		    padding: 1em 1em 1em 1.2em;
+		    outline: none;
+		    border-bottom: 1px solid;
+		    &:hover:nth-child(n+2) {
+		    	background-color: $greemMenuHover;
+		    	cursor: pointer;
+		    }
+		    a {
+		    	text-decoration: none;
+		    	font-size: 16px;
+			    font-weight: bold;
+			    color: white;
+			    text-transform: uppercase;
+		    }
+		    &.active {
+		    	background-color: $greemMenuHover;
+		    }
+		}
+	} 
 }
 
 .background--gray {
@@ -41,11 +67,13 @@ html, body {
 	visibility: hidden;
 }
 .content--action-push {
-	margin-left: auto;
-	margin-right: auto;
+	/* 	margin-left: auto;
+		margin-right: auto;
+		width: 100px;
+	*/
 	display: block;
 	z-index: 3;
-	width: 100px;
+	cursor: pointer;
 }
 
 .show-background--gray {
@@ -57,12 +85,14 @@ html, body {
 	transform: translateX(0%);
 }
 #content {
-	transition: cubic-bezier(.77,.07,.69,.39) 0.4s;
+	transition: cubic-bezier(.77,.07,.69,.39) 0.5s;
 	width: 100%;
 	height: 100%;
 	&.content--transform {
-		// transform-origin: 100% 0%;
-		perspective: 300em; /**rotateY(-15deg)*/;
+		/**rotateY(-15deg)
+		transform-origin: 100% 0%;
+		*/
+		perspective: 300em; 
 	}
 	.intention {
 		width: 100%;
@@ -77,6 +107,6 @@ html, body {
 
 header{
 	height: 100%;
-	transition: cubic-bezier(.77,.07,.69,.39) 0.4s;
+	transition: cubic-bezier(.77,.07,.69,.39) 0.5s;
 	box-sizing: border-box;
 }
