--- a/css/index.css
+++ b/css/index.css
@@ -8,7 +8,7 @@ html, body {
   overflow-x: hidden; }
 
 #menu-toggle {
-  background-color: #48a770;
+  background-color: #a0f2ffad;
   height: 100%;
   position: fixed;
   top: 0;
@@ -29,7 +29,7 @@ html, body {
       outline: none;
       border-bottom: 1px solid; }
       #menu-toggle ul li:hover:nth-child(n+2) {
-        background-color: #388a5a;
+        background-color: #38828a;
         cursor: pointer; }
       #menu-toggle ul li a {
         text-decoration: none;
@@ -38,7 +38,7 @@ html, body {
         color: white;
         text-transform: uppercase; }
       #menu-toggle ul li.active {
-        background-color: #388a5a; }
+        background-color: #38828a; }
 
 .background--gray {
   position: fixed;
@@ -82,7 +82,7 @@ html, body {
     width: 100%;
     height: 100%;
     transform-origin: 100% 0%;
-    background-color: #ffffff; }
+    background-color: #41c84bc4; }
     #content .intention.intention--transform {
       transform: rotateY(-10deg); }
 
@@ -90,5 +90,27 @@ header {
   height: 100%;
   transition: cubic-bezier(0.77, 0.07, 0.69, 0.39) 0.5s;
   box-sizing: border-box; }
+
+#list-notes .content {
+  position: relative;
+  color: #ffffff;
+  width: 100%;
+  height: 100%;
+  -webkit-box-shadow: 0px 0px 68px -15px #ffd53b;
+  -moz-box-shadow: 0px 0px 68px -15px #ffd53b;
+  box-shadow: 0px 0px 68px -15px #ffd53b; }
+  #list-notes .content .card {
+    cursor: pointer; }
+    #list-notes .content .card:hover ~ .delete-card {
+      opacity: 1;
+      visibility: visible; }
+  #list-notes .content .delete-card {
+    position: absolute;
+    top: -9px;
+    right: -2%;
+    color: #dc3545;
+    cursor: pointer;
+    opacity: 0;
+    visibility: hidden; }
 
 /*# sourceMappingURL=index.css.map */
