--- a/scss/index.scss
+++ b/scss/index.scss
@@ -97,7 +97,7 @@ html, body {
 		*/
 		perspective: 300em; 
 	}
-	.intention {
+	.intention, #form {
 		width: 100%;
 		height: 100%;
 		transform-origin: 100% 0%;
@@ -108,7 +108,7 @@ html, body {
 	}
 }
 
-header{
+#app{
 	height: 100%;
 	transition: cubic-bezier(.77,.07,.69,.39) 0.5s;
 	box-sizing: border-box;
